added support languages property to ResxLocalizationProvider for optimized startup time

--- a/src/WPFLocalizeExtension.csproj
+++ b/src/WPFLocalizeExtension.csproj
@@ -25,6 +25,7 @@
 		<DelaySign>false</DelaySign>
 		<PublicSign>true</PublicSign>
 		<AssemblyOriginatorKeyFile>public.snk</AssemblyOriginatorKeyFile>
+		<PackageId>WPFLocalizeExtension.SupportLanguages</PackageId>
 	</PropertyGroup>
 
 	<Choose>
